Change the spacing in the footer.

--- a/components/common.j2
+++ b/components/common.j2
@@ -364,10 +364,10 @@
 {% macro render_site_outer_footer(site) %}
 {% if config and config.footer_message %}
     <footer class="bg-dark container-fluid text-light">
-        <div class="ps-2 ps-md-3 py-3 py-md-4">
+        <div class="py-4">
             <small>{{ config.footer_message|safe }}</small>
         </div>
-        <div class="border-light border-opacity-10 border-top container-fluid py-2 text-end">
+        <div class="border-light border-opacity-10 border-top mx-1 py-2 text-end">
             <small class="opacity-50">Powered by <a class="text-reset" href="https://typlog.com/">Typlog</a></small>
         </div>
     </footer>
