Don’t need any x margin for “Powered by Typlog”.

--- a/components/common.j2
+++ b/components/common.j2
@@ -367,7 +367,7 @@
         <div class="py-4">
             <small>{{ config.footer_message|safe }}</small>
         </div>
-        <div class="border-light border-opacity-10 border-top mx-1 py-2 text-end">
+        <div class="border-light border-opacity-10 border-top py-2 text-end">
             <small class="opacity-50">Powered by <a class="text-reset" href="https://typlog.com/">Typlog</a></small>
         </div>
     </footer>
